// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/RadioGroup/Radio Defaults play-test 1`] = `
<div data-test-block="true">
  <fieldset class="_fieldset_s6jvz_5 _fieldset_hasSpacing_s6jvz_11">
    <legend id="legendId-:ra:"
            class="_srOnly_s6jvz_39"
    >
      radio example
    </legend>
    <div class="_legend_s6jvz_15  _srOnly_s6jvz_39"
         aria-hidden="true"
    >
      radio example
    </div>
    <div class="_contentContainer_s6jvz_32 _contentContainerNoMarginTop_s6jvz_35">
      <div class="_radioGroupItemContainer_1f9v8_5">
        <div class="_radio_1ybg2_1">
          <input id="radioInputId-:rb:"
                 class="_radioInput_1ybg2_5"
                 type="radio"
                 name="radioInputName-:r9:"
                 value
          >
          <label class="_radioLabel_1ybg2_87"
                 for="radioInputId-:rb:"
                 tabindex="-1"
          >
            Enkeltpersonsforetak
          </label>
        </div>
      </div>
      <div id="radioErrorId-:r8:"
           aria-live="assertive"
           aria-atomic="true"
      >
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/RadioGroup/Radio WithAriaDescribedby play-test 1`] = `
<div data-test-block="true">
  <fieldset class="_fieldset_s6jvz_5 _fieldset_hasSpacing_s6jvz_11">
    <legend id="legendId-:ru:"
            class="_srOnly_s6jvz_39"
    >
      radio example
    </legend>
    <div class="_legend_s6jvz_15  _srOnly_s6jvz_39"
         aria-hidden="true"
    >
      radio example
    </div>
    <div class="_contentContainer_s6jvz_32 _contentContainerNoMarginTop_s6jvz_35">
      <div class="_radioGroupItemContainer_1f9v8_5">
        <div class="_radio_1ybg2_1">
          <input id="radioInputId-:rv:"
                 class="_radioInput_1ybg2_5"
                 type="radio"
                 name="radioInputName-:rt:"
                 aria-describedby="htmlId"
                 value
          >
          <label class="_radioLabel_1ybg2_87"
                 for="radioInputId-:rv:"
                 tabindex="-1"
          >
            Enkeltpersonsforetak
          </label>
        </div>
      </div>
      <div id="radioErrorId-:rs:"
           aria-live="assertive"
           aria-atomic="true"
      >
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/RadioGroup/Radio WithAttributes play-test 1`] = `
<div data-test-block="true">
  <fieldset class="_fieldset_s6jvz_5 _fieldset_hasSpacing_s6jvz_11">
    <legend id="legendId-:r6:"
            class="_srOnly_s6jvz_39"
    >
      radio example
    </legend>
    <div class="_legend_s6jvz_15  _srOnly_s6jvz_39"
         aria-hidden="true"
    >
      radio example
    </div>
    <div class="_contentContainer_s6jvz_32 _contentContainerNoMarginTop_s6jvz_35">
      <div class="_radioGroupItemContainer_1f9v8_5">
        <div class="_radio_1ybg2_1 dummyClassname"
             lang="nb"
        >
          <input id="htmlId"
                 class="_radioInput_1ybg2_5"
                 data-testid="123ID"
                 form="formid123"
                 type="radio"
                 name="radioInputName-:r5:"
                 value
          >
          <label class="_radioLabel_1ybg2_87"
                 for="htmlId"
                 tabindex="-1"
          >
            Enkeltpersonsforetak
          </label>
        </div>
      </div>
      <div id="radioErrorId-:r4:"
           aria-live="assertive"
           aria-atomic="true"
      >
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/RadioGroup/Radio WithDescription play-test 1`] = `
<div data-test-block="true">
  <fieldset class="_fieldset_s6jvz_5 _fieldset_hasSpacing_s6jvz_11">
    <legend id="legendId-:re:"
            class="_srOnly_s6jvz_39"
    >
      radio example
    </legend>
    <div class="_legend_s6jvz_15  _srOnly_s6jvz_39"
         aria-hidden="true"
    >
      radio example
    </div>
    <div class="_contentContainer_s6jvz_32 _contentContainerNoMarginTop_s6jvz_35">
      <div class="_radioGroupItemContainer_1f9v8_5">
        <div class="_radio_1ybg2_1">
          <input id="radioInputId-:rf:"
                 class="_radioInput_1ybg2_5"
                 type="radio"
                 name="radioInputName-:rd:"
                 value
          >
          <label class="_radioLabel_1ybg2_87"
                 for="radioInputId-:rf:"
                 tabindex="-1"
          >
            Enkeltpersonsforetak
            <span class="_radioLabelDescription_1ybg2_100">
              En liten beskrivelse tekst
            </span>
          </label>
        </div>
      </div>
      <div id="radioErrorId-:rc:"
           aria-live="assertive"
           aria-atomic="true"
      >
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/RadioGroup/Radio WithLongText smoke-test 1`] = `
<div data-test-block="true">
  <fieldset class="_fieldset_s6jvz_5 _fieldset_hasSpacing_s6jvz_11">
    <legend id="legendId-:ri:"
            class="_srOnly_s6jvz_39"
    >
      radio example
    </legend>
    <div class="_legend_s6jvz_15  _srOnly_s6jvz_39"
         aria-hidden="true"
    >
      radio example
    </div>
    <div class="_contentContainer_s6jvz_32 _contentContainerNoMarginTop_s6jvz_35">
      <div class="_radioGroupItemContainer_1f9v8_5">
        <div class="_radio_1ybg2_1">
          <input id="radioInputId-:rj:"
                 class="_radioInput_1ybg2_5"
                 type="radio"
                 name="radioInputName-:rh:"
                 value
          >
          <label class="_radioLabel_1ybg2_87"
                 for="radioInputId-:rj:"
                 tabindex="-1"
          >
            Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
            <span class="_radioLabelDescription_1ybg2_100">
              Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
            </span>
          </label>
        </div>
      </div>
      <div id="radioErrorId-:rg:"
           aria-live="assertive"
           aria-atomic="true"
      >
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/RadioGroup/Radio WithLongTextAndBreaking smoke-test 1`] = `
<div data-test-block="true">
  <fieldset class="_fieldset_s6jvz_5 _fieldset_hasSpacing_s6jvz_11">
    <legend id="legendId-:rm:"
            class="_srOnly_s6jvz_39"
    >
      radio example
    </legend>
    <div class="_legend_s6jvz_15  _srOnly_s6jvz_39"
         aria-hidden="true"
    >
      radio example
    </div>
    <div class="_contentContainer_s6jvz_32 _contentContainerNoMarginTop_s6jvz_35">
      <div class="_radioGroupItemContainer_1f9v8_5">
        <div class="_radio_1ybg2_1">
          <input id="radioInputId-:rn:"
                 class="_radioInput_1ybg2_5"
                 type="radio"
                 name="radioInputName-:rl:"
                 value
          >
          <label class="_radioLabel_1ybg2_87"
                 for="radioInputId-:rn:"
                 tabindex="-1"
          >
            Loremipsumdolorsitamet.Allesomharlagetennettside,trengtlittfylltekstellerbaresurfetrundtpånettetharantageligvissettdisseordene,etterfulgtaventilsynelatendeeviglangtekstfyltmedlatinskeliksomsetninger.
            <span class="_radioLabelDescription_1ybg2_100">
              Loremipsumdolorsitamet.Allesomharlagetennettside,trengtlittfylltekstellerbaresurfetrundtpånettetharantageligvissettdisseordene,etterfulgtaventilsynelatendeeviglangtekstfyltmedlatinskeliksomsetninger.
            </span>
          </label>
        </div>
      </div>
      <div id="radioErrorId-:rk:"
           aria-live="assertive"
           aria-atomic="true"
      >
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/RadioGroup/Radio WithRef play-test 1`] = `
<div data-test-block="true">
  <fieldset class="_fieldset_s6jvz_5 _fieldset_hasSpacing_s6jvz_11">
    <legend id="legendId-:r2:"
            class="_srOnly_s6jvz_39"
    >
      radio example
    </legend>
    <div class="_legend_s6jvz_15  _srOnly_s6jvz_39"
         aria-hidden="true"
    >
      radio example
    </div>
    <div class="_contentContainer_s6jvz_32 _contentContainerNoMarginTop_s6jvz_35">
      <div class="_radioGroupItemContainer_1f9v8_5">
        <div class="_radio_1ybg2_1">
          <input id="radioInputId-:r3:"
                 class="_radioInput_1ybg2_5"
                 type="radio"
                 name="dummyIdForwardedFromRef"
                 value
          >
          <label class="_radioLabel_1ybg2_87"
                 for="radioInputId-:r3:"
                 tabindex="-1"
          >
            Enkeltpersonsforetak
          </label>
        </div>
      </div>
      <div id="radioErrorId-:r0:"
           aria-live="assertive"
           aria-atomic="true"
      >
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/RadioGroup/Radio WithValue play-test 1`] = `
<div data-test-block="true">
  <fieldset class="_fieldset_s6jvz_5 _fieldset_hasSpacing_s6jvz_11">
    <legend id="legendId-:rq:"
            class="_srOnly_s6jvz_39"
    >
      radio example
    </legend>
    <div class="_legend_s6jvz_15  _srOnly_s6jvz_39"
         aria-hidden="true"
    >
      radio example
    </div>
    <div class="_contentContainer_s6jvz_32 _contentContainerNoMarginTop_s6jvz_35">
      <div class="_radioGroupItemContainer_1f9v8_5">
        <div class="_radio_1ybg2_1">
          <input id="radioInputId-:rr:"
                 class="_radioInput_1ybg2_5"
                 type="radio"
                 name="radioInputName-:rp:"
                 value="person"
          >
          <label class="_radioLabel_1ybg2_87"
                 for="radioInputId-:rr:"
                 tabindex="-1"
          >
            Enkeltpersonsforetak
          </label>
        </div>
      </div>
      <div id="radioErrorId-:ro:"
           aria-live="assertive"
           aria-atomic="true"
      >
      </div>
    </div>
  </fieldset>
</div>
`;
